--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,20 +16,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Use Go 1.17.x
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: 1.17
-
-      - name: Lint with golangci-lint
-        uses: golangci/golangci-lint-action@v2
 
       - name: Install additional go tools
         run: |
           go get .
         shell: bash
+
+      - name: Build
+        run: go build
+        shell: bash
+
+      - name: Lint with golangci-lint
+        uses: golangci/golangci-lint-action@v3
 
       - name: Test
         run: go test -v ./...
