--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,26 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Go
+      - name: Use Go 1.17.x
         uses: actions/setup-go@v3
+        with:
+          go-version: 1.17
+
+      - name: Install additional go tools
+        run: |
+          go get .
+        shell: bash
+
+      - name: Build
+        run: go build
+        shell: bash
+
+      - name: Lint with golangci-lint
+        uses: golangci/golangci-lint-action@v3
+
+      - name: Test
+        run: go test -v ./...
+        shell: bash
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
