--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,12 +49,32 @@ jobs:
         with:
           go-version: 1.17
 
+      - name: Fill releaser configuration
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "__SMTP_FROM__"
+          replace: "${{ secrets.SMTP_FROM }}"
+          regex: false
+          include: ".goreleaser.yaml"
+
+      - name: Fill releaser configuration
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "__SMTP_TARGET_0__"
+          replace: "${{ secrets.SMTP_TARGET_0 }}"
+          regex: false
+          include: ".goreleaser.yaml"
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
         if: startsWith(github.ref, 'refs/tags/')
         with:
           distribution: goreleaser
           version: latest
-          args: release --rm-dist
+          args: release --rm-dist --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SMTP_HOST: ${{ secrets.SMTP_HOST }}
+          SMTP_USERNAME: ${{ secrets.SMTP_USERNAME }}
+          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+          SMTP_PORT: ${{ secrets.SMTP_PORT }}
