--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Fill releaser configuration
         uses: jacobtomlinson/gha-find-replace@v2
         with:
-          find: "__SMTP_FROM__"
+          find: "___SMTP_FROM___"
           replace: "${{ secrets.SMTP_FROM }}"
           regex: false
           include: ".goreleaser.yaml"
@@ -60,7 +60,7 @@ jobs:
       - name: Fill releaser configuration
         uses: jacobtomlinson/gha-find-replace@v2
         with:
-          find: "__SMTP_TARGET_0__"
+          find: "___SMTP_TARGET_0___"
           replace: "${{ secrets.SMTP_TARGET_0 }}"
           regex: false
           include: ".goreleaser.yaml"
@@ -68,8 +68,24 @@ jobs:
       - name: Fill releaser configuration
         uses: jacobtomlinson/gha-find-replace@v2
         with:
-          find: "__SMTP_TARGET_1__"
+          find: "___SMTP_TARGET_1___"
           replace: "${{ secrets.SMTP_TARGET_1 }}"
+          regex: false
+          include: ".goreleaser.yaml"
+
+      - name: Fill releaser configuration
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "___SMTP_TARGET_2___"
+          replace: "${{ secrets.SMTP_TARGET_2 }}"
+          regex: false
+          include: ".goreleaser.yaml"
+
+      - name: Fill releaser configuration
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "___SMTP_TARGET_3___"
+          replace: "${{ secrets.SMTP_TARGET_3 }}"
           regex: false
           include: ".goreleaser.yaml"
 
@@ -95,7 +111,7 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: release --rm-dist --skip-validate --skip-announce
+          args: release --rm-dist --skip-validate
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SMTP_HOST: ${{ secrets.SMTP_HOST }}
