--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,9 +15,9 @@ jobs:
           fetch-depth: 0
 
       - name: Use Go 1.20.x
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20'
 
       - name: Install additional go tools
         run: |
@@ -45,9 +45,9 @@ jobs:
           fetch-depth: 0
 
       - name: Use Go 1.20.x
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: '1.20'
 
       - name: Fill releaser configuration
         uses: jacobtomlinson/gha-find-replace@v2
